Project4/Windows/AbsSynTree/MainDriver/COOL.output
Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    6 optional_feature_list: /* empty */
    7                      | feature_list

    8 feature_list: feature
    9             | feature feature_list

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'

   13 optional_formal_list: /* empty */
   14                     | formal_list

   15 formal_list: formal
   16            | formal ',' formal_list

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '.' OBJECTID '(' optional_expr_list ')'
   20     | expr '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   21     | OBJECTID '(' optional_expr_list ')'
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' gt1_expr_list '}'
   25     | LET let_list
   26     | CASE expr OF case_list ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | '~' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | NOT expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST

   43 optional_initialization: /* empty */
   44                        | ASSIGN expr

   45 let_list: OBJECTID ':' TYPEID optional_initialization IN expr
   46         | OBJECTID ':' TYPEID optional_initialization ',' let_list

   47 case_list: simple_case
   48          | simple_case case_list

   49 simple_case: OBJECTID ':' TYPEID DARROW expr ';'

   50 gt1_expr_list: expr ';'
   51              | expr ';' gt1_expr_list

   52 optional_expr_list: /* empty */
   53                   | expr_list

   54 expr_list: expr
   55          | expr ',' expr_list


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 19 20 21 38
')' (41) 10 19 20 21 38
'*' (42) 31
'+' (43) 29
',' (44) 16 46 55
'-' (45) 30
'.' (46) 19 20
'/' (47) 32
':' (58) 10 11 12 17 45 46 49
';' (59) 4 5 10 11 12 49 50 51
'<' (60) 34
'=' (61) 36
'@' (64) 20
'{' (123) 4 5 10 24
'}' (125) 4 5 10 24
'~' (126) 33
error (256)
STR_CONST (258) 41
TYPEID (259) 4 5 10 11 12 17 20 27 45 46 49
OBJECTID (260) 10 11 12 17 18 19 20 21 39 45 46 49
INT_CONST (261) 40
BOOL_CONST (262) 42
CLASS (263) 4 5
ELSE (264) 22
FI (265) 22
IF (266) 22
IN (267) 45
INHERITS (268) 5
LET (269) 25
LOOP (270) 23
POOL (271) 23
THEN (272) 22
WHILE (273) 23
CASE (274) 26
ESAC (275) 26
OF (276) 26
DARROW (277) 49
NEW (278) 27
ISVOID (279) 28
ASSIGN (280) 12 18 44
NOT (281) 37
LE (282) 35
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
optional_feature_list (49)
    on left: 6 7, on right: 4 5
feature_list (50)
    on left: 8 9, on right: 7 9
feature (51)
    on left: 10 11 12, on right: 8 9
optional_formal_list (52)
    on left: 13 14, on right: 10
formal_list (53)
    on left: 15 16, on right: 14 16
formal (54)
    on left: 17, on right: 15 16
expr (55)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42, on right: 10 12 18 19 20 22 23 26 28 29 30
    31 32 33 34 35 36 37 38 44 45 49 50 51 54 55
optional_initialization (56)
    on left: 43 44, on right: 45 46
let_list (57)
    on left: 45 46, on right: 25 46
case_list (58)
    on left: 47 48, on right: 26 48
simple_case (59)
    on left: 49, on right: 47 48
gt1_expr_list (60)
    on left: 50 51, on right: 24 51
optional_expr_list (61)
    on left: 52 53, on right: 19 20 21
expr_list (62)
    on left: 54 55, on right: 53 55


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .

    $default  reduce using rule 1 (program)


State 4

    2 class_list: class .
    3           | class . class_list

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (class_list)

    class_list  go to state 7
    class       go to state 4


State 5

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 12
    feature_list           go to state 13
    feature                go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 18


State 13

    7 optional_feature_list: feature_list .

    $default  reduce using rule 7 (optional_feature_list)


State 14

    8 feature_list: feature .
    9             | feature . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 19
    feature       go to state 14


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 20
    feature_list           go to state 13
    feature                go to state 14


State 16

   10 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 13 (optional_formal_list)

    optional_formal_list  go to state 22
    formal_list           go to state 23
    formal                go to state 24


State 17

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 25


State 18

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 26


State 19

    9 feature_list: feature feature_list .

    $default  reduce using rule 9 (feature_list)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 27


State 21

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


State 22

   10 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 29


State 23

   14 optional_formal_list: formal_list .

    $default  reduce using rule 14 (optional_formal_list)


State 24

   15 formal_list: formal .
   16            | formal . ',' formal_list

    ','  shift, and go to state 30

    $default  reduce using rule 15 (formal_list)


State 25

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 31
    ';'     shift, and go to state 32


State 26

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 33


State 28

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 29

   10 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 35


State 30

   16 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 21

    formal_list  go to state 36
    formal       go to state 24


State 31

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 51


State 32

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 35

   10 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 52


State 36

   16 formal_list: formal ',' formal_list .

    $default  reduce using rule 16 (formal_list)


State 37

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


State 38

   18 expr: OBJECTID . ASSIGN expr
   21     | OBJECTID . '(' optional_expr_list ')'
   39     | OBJECTID .

    ASSIGN  shift, and go to state 53
    '('     shift, and go to state 54

    $default  reduce using rule 39 (expr)


State 39

   40 expr: INT_CONST .

    $default  reduce using rule 40 (expr)


State 40

   42 expr: BOOL_CONST .

    $default  reduce using rule 42 (expr)


State 41

   22 expr: IF . expr THEN expr ELSE expr FI

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 55


State 42

   25 expr: LET . let_list

    OBJECTID  shift, and go to state 56

    let_list  go to state 57


State 43

   23 expr: WHILE . expr LOOP expr POOL

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 58


State 44

   26 expr: CASE . expr OF case_list ESAC

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 59


State 45

   27 expr: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 46

   28 expr: ISVOID . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 61


State 47

   37 expr: NOT . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 62


State 48

   33 expr: '~' . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 63


State 49

   24 expr: '{' . gt1_expr_list '}'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr           go to state 64
    gt1_expr_list  go to state 65


State 50

   38 expr: '(' . expr ')'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 66


State 51

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 76


State 52

   10 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 77


State 53

   18 expr: OBJECTID ASSIGN . expr

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 78


State 54

   21 expr: OBJECTID '(' . optional_expr_list ')'

    STR_CONST   shift, and go to state 37
    OBJECTID    shift, and go to state 38
    INT_CONST   shift, and go to state 39
    BOOL_CONST  shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 52 (optional_expr_list)

    expr                go to state 79
    optional_expr_list  go to state 80
    expr_list           go to state 81


State 55

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   22     | IF expr . THEN expr ELSE expr FI
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '-'   shift, and go to state 70
    '+'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 56

   45 let_list: OBJECTID . ':' TYPEID optional_initialization IN expr
   46         | OBJECTID . ':' TYPEID optional_initialization ',' let_list

    ':'  shift, and go to state 83


State 57

   25 expr: LET let_list .

    $default  reduce using rule 25 (expr)


State 58

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   23     | WHILE expr . LOOP expr POOL
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LOOP  shift, and go to state 84
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '-'   shift, and go to state 70
    '+'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 59

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   26     | CASE expr . OF case_list ESAC
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    OF   shift, and go to state 85
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


State 60

   27 expr: NEW TYPEID .

    $default  reduce using rule 27 (expr)


State 61

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   28     | ISVOID expr .
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 28 (expr)


State 62

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   37     | NOT expr .

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 37 (expr)


State 63

   19 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   20     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | '~' expr .
